# veryl

./: Cargo.toml
crates/analyzer/src/: symbol.rs
crates/analyzer/src/handlers/: create_symbol_table.rs
crates/emitter/src/: emitter.rs
crates/formatter/src/: formatter.rs
crates/languageserver/src/: tests.rs
crates/parser/: Cargo.toml  build.rs  veryl.par
crates/parser/src/: parser_error.rs  token_range.rs  veryl_token.rs  veryl_walker.rs
